--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
     "mongoose": "^7.2.1",
+    "mongoose-paginate-v2": "^1.7.1",
     "mongoose-pagination": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0"
